# ttp_templates

./: .gitignore  404.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  arista_bgp_neighbors_README.md  generate_docs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: contribute_template.md  issue_template.md
.github/workflows/: main.yml
api_reference/: index.html
contribute/: index.html
docs/: api_reference.md  contribute.md  getters_support_matrix.md  index.md  release_notes.md  template_guidelines.md  writing_docs.md
docs/ttp_templates/: get.bgp_neighbors.md  get.interfaces.md  get.inventory.md  get.lldp_neighbors.md  get.netbox.md  misc.N2G.cdp_lldp.Cisco_IOS.md  misc.N2G.cdp_lldp.Cisco_IOSXR.md  misc.N2G.cdp_lldp.Cisco_NXOS.md  misc.N2G.cdp_lldp.Huawei.md  misc.N2G.cli_ip_data.a10.md  misc.N2G.cli_ip_data.arista_eos.md  misc.N2G.cli_ip_data.cisco_ios.md  misc.N2G.cli_ip_data.cisco_nxos.md  misc.N2G.cli_ip_data.cisco_xr.md  misc.N2G.cli_ip_data.fortinet.md  misc.N2G.cli_ip_data.huawei.md  misc.N2G.cli_ip_data.juniper_junos.md  misc.N2G.cli_ip_data.readme.md  misc.N2G.cli_isis_data.cisco_xr.md  misc.N2G.cli_isis_data.juniper.md  misc.N2G.cli_isis_data.juniper_junos.md  misc.N2G.cli_l2_data.cisco_ios.md  misc.N2G.cli_l2_data.cisco_nxos.md  misc.N2G.cli_l2_data.cisco_xr.md  misc.N2G.cli_l2_data.huawei.md  misc.N2G.cli_l2_data.juniper.md  misc.N2G.cli_l2_data.juniper_junos.md  misc.N2G.cli_l2_data.readme.md  misc.N2G.cli_ospf_data.cisco_ios.md  misc.N2G.cli_ospf_data.cisco_xr.md  misc.N2G.cli_ospf_data.huawei.md  misc.N2G.cli_ospf_data.readme.md  misc.N2G.isis_lsdb.Cisco_IOSXR.md  misc.N2G.ospf_lsdb.Cisco_IOS.md  misc.N2G.ospf_lsdb.Cisco_IOSXR.md  misc.N2G.ospf_lsdb.Huawei.md  misc.Netbox.parse_arista_eos_config.md  misc.Netbox.parse_cisco_nxos_config.md  misc.Netbox.parse_cisco_xr_config.md  misc.Netbox.parse_juniper_junos_config.md  (+56 more)
getters_support_matrix/: index.html
release_notes/: index.html
search/: search_index.json
test/: .coverage  conftest.py  test_get_inventory.py  test_misc_netmiko_templates.py  test_misc_netmiko_templates_2.py  test_n2g_templates.py  test_platform_arista_eos.py  test_platform_cisco_ios.py  test_platform_cisco_xr.py  test_platform_dynamic.py  test_platform_huawei.py  test_platform_juniper.py  test_ttp_templates_methods.py  test_yang_ietf_interfaces.py  test_yang_openconfig_lldp.py
test/mock_data/: arista_eos_show_hostname.txt  cisco_ios_show_ip_ospf_database_external_IOL4_ABR.txt  cisco_ios_show_ip_ospf_database_router_IOL4_ABR.txt  cisco_ios_show_ip_ospf_database_summary_IOL4_ABR.txt  cisco_ios_show_isdn_status.txt  cisco_xr_show_ip_ospf_database_router_external_summary_router-1.txt  cisco_xr_show_ip_ospf_database_router_external_summary_router-2.txt  cisco_xr_show_isis_database_verbose.txt  huawei_display_ospf_lsdb_router.txt  juniper_show_isis_database_verbose_pipe_no_more.txt  test_N2G_cli_l2_data_juniper.txt
ttp_templates/: __init__.py  cisco_ios_show_isdn_status.txt  ttp_templates.py  ttp_vars.py
ttp_templates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ttp_templates/get/: bgp_neighbors.txt  interfaces.txt  inventory.txt  lldp_neighbors.txt  netbox.txt
ttp_templates/get.bgp_neighbors/: index.html
ttp_templates/get.interfaces/: index.html
ttp_templates/get.inventory/: index.html
ttp_templates/get.lldp_neighbors/: index.html
ttp_templates/get.netbox/: index.html
ttp_templates/misc.N2G.cdp_lldp.Cisco_IOS/: index.html
ttp_templates/misc.N2G.cdp_lldp.Cisco_IOSXR/: index.html
ttp_templates/misc.N2G.cdp_lldp.Cisco_NXOS/: index.html
ttp_templates/misc.N2G.cdp_lldp.Huawei/: index.html
ttp_templates/misc.N2G.cli_ip_data.a10/: index.html
ttp_templates/misc.N2G.cli_ip_data.arista_eos/: index.html
ttp_templates/misc.N2G.cli_ip_data.cisco_ios/: index.html
ttp_templates/misc.N2G.cli_ip_data.cisco_nxos/: index.html
ttp_templates/misc.N2G.cli_ip_data.cisco_xr/: index.html
ttp_templates/misc.N2G.cli_ip_data.fortinet/: index.html
ttp_templates/misc.N2G.cli_ip_data.huawei/: index.html
ttp_templates/misc.N2G.cli_ip_data.juniper_junos/: index.html
ttp_templates/misc.N2G.cli_ip_data.readme/: index.html
ttp_templates/misc.N2G.cli_isis_data.cisco_xr/: index.html
ttp_templates/misc.N2G.cli_isis_data.juniper/: index.html
ttp_templates/misc.N2G.cli_isis_data.juniper_junos/: index.html
ttp_templates/misc.N2G.cli_isis_data.readme/: index.html
ttp_templates/misc.N2G.cli_l2_data.cisco_ios/: index.html
ttp_templates/misc.N2G.cli_l2_data.cisco_nxos/: index.html
ttp_templates/misc.N2G.cli_l2_data.cisco_xr/: index.html
ttp_templates/misc.N2G.cli_l2_data.huawei/: index.html
ttp_templates/misc.N2G.cli_l2_data.juniper/: index.html
ttp_templates/misc.N2G.cli_l2_data.juniper_junos/: index.html
ttp_templates/utils/: models.py  (+28 more)
writing_docs/: index.html
(+213 files in other folders)
